<resources>
    <!--<string name="app_name" translatable="false">Voice Changer</string>-->
    <string name="app_name" translatable="false">AAVoice Changer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_home">Home</string>
    <string name="nav_history">History</string>
    <string name="nav_settings">Settings</string>
    <string name="ai_voice_changer">Ai Voice Changer</string>
    <string name="voice_changer">Voice Changer</string>
    <string name="record_to_change_your_voice">Record to Change your Voice</string>
    <string name="record">Record</string>
    <string name="text_to_voice">Text to Voice</string>
    <string name="change_text_into_voice">Change text into Voice</string>
    <string name="write_text">Write Text</string>
    <string name="speech_to_text">Speech to Text</string>
    <string name="convert_speech_into_text">Convert speech into text</string>
    <string name="prank_sound">Prank Sound</string>
    <string name="play_funny_sounds">Play funny sounds</string>
    <string name="see_all">See all</string>
    <string name="voice_effects">Voice Effects</string>
    <string name="import_">Import</string>
    <string name="tap_to_start_recording">Tap to Start Recording</string>
    <string name="tap_to_start_first_recording">Tap to start first recording.</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="previous_files">Previous Files</string>
    <string name="no_recordings_yet">No recordings yet</string>
    <string name="record_audio">Record Audio</string>
    <string name="save">Save</string>
    <string name="dummy_title">AUD-2025_43897509</string>
    <string name="change_voice">Change Voice</string>
    <string name="background_effects">Background Effects</string>
    <string name="adjustment">Adjustment</string>
    <string name="_0">0</string>
    <string name="_30">30</string>
    <string name="voice_effect">Voice Effect</string>
    <string name="speed">Speed</string>
    <string name="_12">12</string>
    <string name="saving_audio_file">♫ Saving Audio File…</string>
    <string name="this_may_take_sec">This may take a few seconds</string>
    <string name="audio_saved">Audio Saved Successfully</string>
    <string name="your_file_is_ready">Your file is ready to use.</string>
    <string name="add_more_effect">Add More Effects</string>
    <string name="save_without_effect">Save without Effects?</string>
    <string name="you_can_continue_editing">You can continue editing or sae your changes\nwithout effects.</string>
    <string name="continue_editing">Continue Editing</string>
    <string name="discard_changes">Discard Changes?</string>
    <string name="your_progress_loss">Your progress will be lost, Are you sure you\nwant to discard?</string>
    <string name="exit">Exit</string>
    <string name="enter_text">Enter Text</string>
    <string name="yo_can_type_words_sentences_or_scripts">You can type words, sentences or scripts</string>
    <string name="generate_voice">Generate Voice</string>
    <string name="watch_an_ad">Watch an ad</string>
    <string name="convert_your_voice">Convert your voice into text instantly.</string>
    <string name="record_voice">Record Voice</string>
    <string name="speak_and_we_will_transcribe">Speak and we\'ll transcribe</string>
    <string name="upload_voice">Upload Voice</string>
    <string name="upload_an_audio_file">Upload an audio file</string>
    <string name="upload">Upload</string>
    <string name="generate_text">Generate Text</string>
    <string name="your_text_is_ready">Your Text is Ready</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="upgrage_to_pro">Upgrade to Pro!</string>
    <string name="get_unlimited">Get unlimited effects, prank sounds, and an\nad-free experience.</string>
    <string name="explore_pro_features">Explore Pro Features</string>
    <string name="history">History</string>
    <string name="change_language">Change Language</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_the_app">Share the app</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="general">General</string>
    <string name="select_language">Select Language</string>
    <string name="done">Done</string>
    <string name="change_your_voice_instantly">Change Your Voice Instantly</string>
    <string name="next">Next</string>
    <string name="turn_text_into_voice">Turn Text into Voice</string>
    <string name="speak_to_text_easily">Speak to Text Easily</string>
    <string name="start">Start</string>
    <string name="your_voice_your_style">Your voice, your style</string>
    <string name="play_funny_sounds_to_surprise_friends">Play funny sounds to surprise friends</string>
    <string name="sounds">Sounds</string>
    <string name="Play">Play</string>
    <string name="volume">Volume</string>
    <string name="duration">Duration</string>
    <string name="_5_seconds">5 Seconds</string>
    <string name="_5s">5S</string>
    <string name="_15s">15S</string>
    <string name="_30s">30S</string>
    <string name="_1m">1M</string>
    <string name="pause">Pause</string>
    <string name="loop">Loop</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>