<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:paddingHorizontal="@dimen/_10sdp"
    tools:context="com.voicechanger.funnysound.ui.home.HomeFragment">





    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:src="@drawable/ic_cross_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_semibold"
        android:text="@string/text_to_voice"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toTopOf="@id/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/back"
        />


    <TextView
        android:id="@+id/tv_enter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_medium"
        android:text="@string/enter_text"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        />


    <EditText
        android:id="@+id/editext"
        android:layout_width="0dp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:gravity="top"
        android:background="@drawable/bg_edittext"
        android:hint="@string/yo_can_type_words_sentences_or_scripts"
        android:padding="@dimen/_5sdp"
        android:fontFamily="@font/outfit_regular"
        android:textColor="@color/unselected_color"
        android:textColorHint="@color/unselected_color"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_text"/>


    <TextView
        android:id="@+id/tv_prank_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editext"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/voice_effects"
        android:fontFamily="@font/outfit_medium"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tv_see_all1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_prank_sound"
        app:layout_constraintBottom_toBottomOf="@id/tv_prank_sound"
        android:text="@string/see_all"
        android:paddingStart="@dimen/_5sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:fontFamily="@font/outfit_regular"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/white"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_voice_effects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginTop="@dimen/_8sdp"
        tools:listitem="@layout/item_prank_sound"
        app:layout_constraintTop_toBottomOf="@id/tv_see_all1"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_generate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rv_voice_effects"
        android:layout_marginTop="@dimen/_18sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:background="@drawable/bg_rounded_constraintlayout_gradient">

        <TextView
         android:id="@+id/tv_generate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_semibold"
            android:text="@string/generate_voice"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_light"
            android:text="@string/watch_an_ad"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintTop_toBottomOf="@id/tv_generate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>