<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingBottom="@dimen/_10sdp"
    android:background="@drawable/bg_rounded_constraintlayout"
    >


    <TextView
        android:id="@+id/tv_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/save_without_effect"
        android:fontFamily="@font/outfit_semibold"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/white"/>


    <TextView
        android:id="@+id/tv_you_can_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_warning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/you_can_continue_editing"
        android:fontFamily="@font/outfit_regular"
        android:textSize="@dimen/_11ssp"
        android:gravity="center"
        android:textColor="@color/unselected_color"/>

    <TextView
        android:id="@+id/btn_continue_editing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_medium"
        android:text="@string/continue_editing"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_9sdp"
        android:layout_marginTop="@dimen/_18sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_you_can_continue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:background="@drawable/bg_rounded_constraintlayout_gradient"
        />


    <TextView
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_medium"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_9sdp"
        android:layout_marginTop="@dimen/_6sdp"
        app:layout_constraintTop_toBottomOf="@id/btn_continue_editing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:background="@drawable/bg_rounded_constraintlayout"
        android:backgroundTint="#2F333C"
        />

</androidx.constraintlayout.widget.ConstraintLayout>