<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_10sdp"
    android:layout_marginVertical="@dimen/_10sdp"
    android:background="@drawable/bg_expanded_item">


    <TextView
        android:id="@+id/tv_adjustment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/outfit_medium"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/white"
        android:text="@string/adjustment"/>

    <ImageView
        android:id="@+id/btn_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_refresh"/>


    <TextView
        android:id="@+id/tv_voice_effect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_adjustment"
        app:layout_constraintTop_toBottomOf="@id/tv_adjustment"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/outfit_regular"
        android:textSize="@dimen/_11ssp"
        android:textColor="@color/white"
        android:text="@string/voice_effect"/>


    <TextView
        android:id="@+id/tv_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_adjustment"
        app:layout_constraintTop_toTopOf="@id/seekBar_voice_effect"
        app:layout_constraintBottom_toBottomOf="@id/seekBar_voice_effect"
        android:fontFamily="@font/outfit_regular"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/unselected_color"
        android:text="@string/_0"/>

    <SeekBar
        android:id="@+id/seekBar_voice_effect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_voice_effect"
        android:layout_marginTop="@dimen/_3sdp"
        app:layout_constraintStart_toEndOf="@id/tv_0"
        app:layout_constraintEnd_toStartOf="@id/tv_30"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:progressDrawable="@drawable/seekbar_progress_new"
        android:thumb="@drawable/thumb_audio"
        android:thumbOffset="0dp"
        android:splitTrack="false"
        android:minHeight="6dp"
        android:maxHeight="6dp"
        android:max="12"
        android:progress="6"/>

    <TextView
        android:id="@+id/tv_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/seekBar_voice_effect"
        app:layout_constraintBottom_toBottomOf="@id/seekBar_voice_effect"
        android:fontFamily="@font/outfit_regular"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/unselected_color"
        android:text="@string/_12"/>



    <TextView
        android:id="@+id/tv_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_adjustment"
        app:layout_constraintTop_toBottomOf="@id/seekBar_voice_effect"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/outfit_regular"
        android:textSize="@dimen/_11ssp"
        android:textColor="@color/white"
        android:text="@string/speed"/>

    <SeekBar
        android:id="@+id/seekBar_speed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_speed"
        android:layout_marginTop="@dimen/_3sdp"
        app:layout_constraintStart_toEndOf="@id/tv_0"
        app:layout_constraintEnd_toStartOf="@id/tv_30"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:progressDrawable="@drawable/seekbar_progress_new"
        android:thumb="@drawable/thumb_audio"
        android:thumbOffset="0dp"
        android:splitTrack="false"
        android:minHeight="6dp"
        android:maxHeight="6dp"
        android:max="30"
        android:progress="15"/>

    <TextView
        android:id="@+id/tv_00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_adjustment"
        app:layout_constraintTop_toTopOf="@id/seekBar_speed"
        app:layout_constraintBottom_toBottomOf="@id/seekBar_speed"
        android:fontFamily="@font/outfit_regular"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/unselected_color"
        android:text="@string/_0"/>

    <TextView
        android:id="@+id/tv_300"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/seekBar_speed"
        app:layout_constraintBottom_toBottomOf="@id/seekBar_speed"
        android:fontFamily="@font/outfit_regular"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/unselected_color"
        android:text="@string/_30"/>


</androidx.constraintlayout.widget.ConstraintLayout>

